--- a/template/index.html
+++ b/template/index.html
@@ -16,7 +16,8 @@
             fill: rgba(0,0,0,0);
         }
         svg.railroad-diagram text {
-            font: bold 14px monospace;
+            font-weight: 600;
+            font-size: 14px;
             text-anchor: middle;
             white-space: pre;
         }
@@ -30,10 +31,11 @@
             text-anchor: start;
         }
         svg.railroad-diagram text.comment {
-            font: italic 12px monospace;
+            font-style: italic;
+            font-size: 12px;
         }
         svg.railroad-diagram g.non-terminal text {
-            /*font-style: italic;*/
+            font-style: italic;
         }
         svg.railroad-diagram rect {
             stroke-width: 3;
@@ -55,6 +57,9 @@
             fill: #eee;
         }
 
+        h1, p, text {
+            font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+        }
     </style>
 </head>
 <body>
