--- a/template/index.html
+++ b/template/index.html
@@ -57,7 +57,7 @@
             fill: #eee;
         }
 
-        h1, p, text {
+        h1, p, text, a, span {
             font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
         }
     </style>
