reverse instead of move, literals, point out lexed

--- a/template/index.html
+++ b/template/index.html
@@ -65,6 +65,7 @@
 <body>
     <div class="railroads">
         <a href="#{{start}}">Jump to start ({{start}})</a>
+        <p>The diagrams are in order from the entry to the last rule found</p>
         {{#diagrams}}
         <div>
             <h1 id="{{name}}">{{name}} <span style="font-weight:300;font-size:20px;">{{comment}}</span></h1>
