--- a/template/index.html
+++ b/template/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{name}}</title>
     <style>
+        #root-link {
+            position: fixed;
+            right: 2em;
+        }
         svg.railroad-diagram {
             background-color: hsl(30,20%,95%);
         }
@@ -64,7 +68,7 @@
 </head>
 <body>
     <div class="railroads">
-        <a href="#{{start}}">Jump to start ({{start}})</a>
+        <a id="root-link" href="#{{start}}">Jump to start ({{start}})</a>
         <p>The diagrams are in order from the entry rule to the last rule found</p>
         <p>Please note this is the default template. You can make this more pretty but making your own templates.</p>
         {{#diagrams}}
